--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ITS - Assignment 08</title>
-
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,6 +17,109 @@
     ></script>
   </head>
   <body>
+    <header>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary pt-3 px-4">
+        <div class="container-fluid">
+          <a id="navTitle" class="navbar-brand" href="#"></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse justify-content-end"
+            id="navbarNav"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Customer</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Item</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Order</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section id="customer-section" class="pt-3 px-5">
+        <h1 class="mb-5">Customer Registration</h1>
+
+        <div class="row">
+          <div class="col-md-5 mb-5">
+            <form id="registration">
+              <div class="mb-4">
+                <label for="customerId" class="form-label">Customer ID</label>
+                <input type="text" class="form-control" id="customerId" />
+              </div>
+
+              <div class="mb-4">
+                <label for="name" class="form-label">Customer Name</label>
+                <input type="text" class="form-control" id="customerName" />
+              </div>
+
+              <div class="mb-4">
+                <label for="customerAddress" class="form-label"
+                  >Customer Address</label
+                >
+                <input type="text" class="form-control" id="customerAddress" />
+              </div>
+
+              <div class="mb-4">
+                <label for="customerSalary" class="form-label"
+                  >Customer Salary</label
+                >
+                <input type="number" class="form-control" id="customerSalary" />
+              </div>
+            </form>
+
+            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+              <button type="submit" class="btn btn-outline-primary">
+                Save Customer
+              </button>
+              <button type="button" class="btn btn-outline-warning">
+                Remove
+              </button>
+              <button type="button" class="btn btn-outline-info">Update</button>
+              <button type="button" class="btn btn-outline-success">
+                Get All
+              </button>
+              <button type="button" class="btn btn-outline-danger">
+                Clear All
+              </button>
+            </div>
+          </div>
+
+          <div class="col-md-7">
+            <table id="customerTable" class="table table-hover table-bordered">
+              <thead class="table-dark">
+                <tr>
+                  <th scope="col">Customer ID</th>
+                  <th scope="col">Customer Name</th>
+                  <th scope="col">Customer Address</th>
+                  <th scope="col">Customer Salary</th>
+                </tr>
+              </thead>
+              <tbody></tbody>
+            </table>
+          </div>
+        </div>
+      </section>
+    </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script type="module" src="/Controller/CustomerController.js"></script>
   </body>
 </html>
