--- a/index.html
+++ b/index.html
@@ -38,16 +38,22 @@
           >
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a
+                  id="homeLink"
+                  class="nav-link active"
+                  aria-current="page"
+                  href="#"
+                  >Home</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Customer</a>
+                <a id="customerLink" class="nav-link" href="#">Customer</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Item</a>
+                <a id="itemLink" class="nav-link" href="#">Item</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Order</a>
+                <a id="orderLink" class="nav-link" href="#">Order</a>
               </li>
             </ul>
           </div>
@@ -55,19 +61,23 @@
       </nav>
     </header>
     <main>
+      <section id="section"></section>
+
       <section id="customer-section" class="pt-3 px-5">
         <h1 class="mb-5">Customer Registration</h1>
 
         <div class="row">
           <div class="col-md-5 mb-5">
-            <form id="registration">
+            <form id="customerRegistration">
               <div class="mb-4">
                 <label for="customerId" class="form-label">Customer ID</label>
                 <input type="text" class="form-control" id="customerId" />
               </div>
 
               <div class="mb-4">
-                <label for="name" class="form-label">Customer Name</label>
+                <label for="customerName" class="form-label"
+                  >Customer Name</label
+                >
                 <input type="text" class="form-control" id="customerName" />
               </div>
 
@@ -84,23 +94,25 @@
                 >
                 <input type="number" class="form-control" id="customerSalary" />
               </div>
-            </form>
 
-            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-              <button type="submit" class="btn btn-outline-primary">
-                Save Customer
-              </button>
-              <button type="button" class="btn btn-outline-warning">
-                Remove
-              </button>
-              <button type="button" class="btn btn-outline-info">Update</button>
-              <button type="button" class="btn btn-outline-success">
-                Get All
-              </button>
-              <button type="button" class="btn btn-outline-danger">
-                Clear All
-              </button>
-            </div>
+              <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                <button type="submit" class="btn btn-outline-primary">
+                  Save Customer
+                </button>
+                <button type="button" class="btn btn-outline-warning">
+                  Remove
+                </button>
+                <button type="button" class="btn btn-outline-info">
+                  Update
+                </button>
+                <button type="button" class="btn btn-outline-success">
+                  Get All
+                </button>
+                <button type="button" class="btn btn-outline-danger">
+                  Clear All
+                </button>
+              </div>
+            </form>
           </div>
 
           <div class="col-md-7">
@@ -118,8 +130,72 @@
           </div>
         </div>
       </section>
+
+      <section id="item-section" class="pt-3 px-5">
+        <h1 class="mb-5">Item Form</h1>
+
+        <div class="row">
+          <div class="col-md-5 mb-5">
+            <form id="itemEntry">
+              <div class="mb-4">
+                <label for="itemCode" class="form-label">Item Code</label>
+                <input type="text" class="form-control" id="itemCode" />
+              </div>
+
+              <div class="mb-4">
+                <label for="itemName" class="form-label">Item Name</label>
+                <input type="text" class="form-control" id="itemName" />
+              </div>
+
+              <div class="mb-4">
+                <label for="itemQty" class="form-label">Item Qty</label>
+                <input type="text" class="form-control" id="itemQty" />
+              </div>
+
+              <div class="mb-4">
+                <label for="itemPrice" class="form-label">Unit Price</label>
+                <input type="number" class="form-control" id="itemPrice" />
+              </div>
+
+              <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                <button type="submit" class="btn btn-outline-primary">
+                  Save Customer
+                </button>
+                <button type="button" class="btn btn-outline-warning">
+                  Remove
+                </button>
+                <button type="button" class="btn btn-outline-info">
+                  Update
+                </button>
+                <button type="button" class="btn btn-outline-success">
+                  Get All
+                </button>
+                <button type="button" class="btn btn-outline-danger">
+                  Clear All
+                </button>
+              </div>
+            </form>
+          </div>
+
+          <div class="col-md-7">
+            <table id="itemTable" class="table table-hover table-bordered">
+              <thead class="table-dark">
+                <tr>
+                  <th scope="col">Item Code</th>
+                  <th scope="col">Item Name</th>
+                  <th scope="col">Item Qty</th>
+                  <th scope="col">unit Price</th>
+                </tr>
+              </thead>
+              <tbody></tbody>
+            </table>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script type="module" src="/Controller/CustomerController.js"></script>
+    <script src="/controller/NavigationController.js"></script>
+    <script type="module" src="/controller/CustomerController.js"></script>
+    <script type="module" src="/controller/ItemController.js"></script>
   </body>
 </html>
