--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary pt-3 px-4">
         <div class="container-fluid">
-          <a id="navTitle" class="navbar-brand" href="#"></a>
+          <a id="navTitle" class="navbar-brand" href="#">Dashboard</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -46,13 +46,13 @@
                   >Home</a
                 >
               </li>
-              <li class="nav-item">
+              <li class="nav-item ps-lg-4">
                 <a id="customerLink" class="nav-link" href="#">Customer</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item ps-lg-4">
                 <a id="itemLink" class="nav-link" href="#">Item</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item ps-lg-4">
                 <a id="orderLink" class="nav-link" href="#">Order</a>
               </li>
             </ul>
@@ -66,12 +66,17 @@
       <section id="customer-section" class="pt-3 px-5">
         <h1 class="mb-5">Customer Registration</h1>
 
-        <div class="row">
-          <div class="col-md-5 mb-5">
+        <div class="row justify-content-between">
+          <div class="col-md-5 mb-5 shadow p-3 bg-body-tertiary rounded">
             <form id="customerRegistration">
-              <div class="mb-4">
+              <div class="my-4">
                 <label for="customerId" class="form-label">Customer ID</label>
-                <input type="text" class="form-control" id="customerId" />
+                <input
+                  type="text"
+                  class="form-control"
+                  id="customerId"
+                  readonly
+                />
               </div>
 
               <div class="mb-4">
@@ -95,7 +100,9 @@
                 <input type="number" class="form-control" id="customerSalary" />
               </div>
 
-              <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+              <div
+                class="d-grid gap-2 d-md-flex justify-content-md-start mt-5 mb-3"
+              >
                 <button type="submit" class="btn btn-outline-primary">
                   Save Customer
                 </button>
@@ -115,7 +122,7 @@
             </form>
           </div>
 
-          <div class="col-md-7">
+          <div class="col-lg-6">
             <table id="customerTable" class="table table-hover table-bordered">
               <thead class="table-dark">
                 <tr>
@@ -134,12 +141,17 @@
       <section id="item-section" class="pt-3 px-5">
         <h1 class="mb-5">Item Form</h1>
 
-        <div class="row">
-          <div class="col-md-5 mb-5">
+        <div class="row justify-content-between">
+          <div class="col-md-5 mb-5 shadow p-3 bg-body-tertiary rounded">
             <form id="itemEntry">
               <div class="mb-4">
                 <label for="itemCode" class="form-label">Item Code</label>
-                <input type="text" class="form-control" id="itemCode" />
+                <input
+                  type="text"
+                  class="form-control"
+                  id="itemCode"
+                  readonly
+                />
               </div>
 
               <div class="mb-4">
@@ -157,9 +169,11 @@
                 <input type="number" class="form-control" id="itemPrice" />
               </div>
 
-              <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+              <div
+                class="d-grid gap-2 d-md-flex justify-content-md-start mt-5 mb-3"
+              >
                 <button type="submit" class="btn btn-outline-primary">
-                  Save Customer
+                  Save Item
                 </button>
                 <button type="button" class="btn btn-outline-warning">
                   Remove
@@ -177,7 +191,7 @@
             </form>
           </div>
 
-          <div class="col-md-7">
+          <div class="col-lg-6">
             <table id="itemTable" class="table table-hover table-bordered">
               <thead class="table-dark">
                 <tr>
@@ -192,10 +206,233 @@
           </div>
         </div>
       </section>
+
+      <section id="order-section" class="pt-3 px-5">
+        <h1 class="my-4">Order Form</h1>
+
+        <div class="row my-md-5 justify-content-between">
+          <form
+            id="invoice"
+            class="col-md-4 mb-5 shadow p-3 bg-body-tertiary rounded"
+          >
+            <h4 class="text-white bg-black bg-gradient p-2">Invoice Details</h4>
+
+            <div class="row my-3">
+              <div class="col">
+                <label for="orderId" class="form-label">Order ID:</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Order ID"
+                  id="orderId"
+                  readonly
+                />
+              </div>
+              <div class="col">
+                <label for="date" class="form-label">Date</label>
+                <input type="date" class="form-control" id="date" readonly />
+              </div>
+            </div>
+
+            <div class="row my-3">
+              <div class="col">
+                <label for="selectCustomer" class="form-label">Customer:</label>
+                <select id="selectCustomer" class="form-select"></select>
+              </div>
+
+              <div class="col">
+                <label for="selectCustId" class="form-label"
+                  >Customer ID:</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="selectCustId"
+                  readonly
+                />
+              </div>
+            </div>
+
+            <div class="row my-3">
+              <div class="col">
+                <label for="selectCustName" class="form-label"
+                  >Customer Name:</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="selectCustName"
+                  readonly
+                />
+              </div>
+              <div class="col">
+                <label for="selectCustSalary" class="form-label"
+                  >Customer Salary:</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="selectCustSalary"
+                  readonly
+                />
+              </div>
+            </div>
+
+            <div class="row my-3">
+              <div class="col">
+                <label for="selectCustAddress" class="form-label"
+                  >Customer Address:</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="selectCustAddress"
+                  readonly
+                />
+              </div>
+            </div>
+          </form>
+
+          <form
+            id="inventory"
+            class="col-lg-4 mb-5 shadow p-3 bg-body-tertiary rounded"
+          >
+            <h4 class="text-white bg-black bg-gradient p-2">Item Select</h4>
+
+            <div class="row my-3">
+              <div class="col">
+                <label for="selectItem" class="form-label">Item:</label>
+                <select id="selectItem" class="form-select"></select>
+              </div>
+
+              <div class="col">
+                <label for="selectItemCode" class="form-label"
+                  >Item Code:</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="selectItemCode"
+                  readonly
+                />
+              </div>
+            </div>
+
+            <div class="row my-3">
+              <div class="col-6">
+                <label for="selectItemName" class="form-label"
+                  >Item Name:</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="selectItemName"
+                  readonly
+                />
+              </div>
+
+              <div class="col-4">
+                <label for="selectItemPrice" class="form-label"
+                  >unit Price:</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="selectItemPrice"
+                  readonly
+                />
+              </div>
+
+              <div class="col-2">
+                <label for="availableQty" class="form-label">Stock:</label>
+                <input
+                  type="number"
+                  class="form-control"
+                  id="availableQty"
+                  readonly
+                />
+              </div>
+            </div>
+
+            <div class="row my-3">
+              <div class="col">
+                <label for="orderQuantity" class="form-label"
+                  >Order Quantity:</label
+                >
+                <input type="number" class="form-control" id="orderQuantity" />
+              </div>
+            </div>
+
+            <div class="d-md-flex justify-content-md-end mt-lg-5">
+              <button type="submit" class="btn btn-outline-primary">
+                Add Item
+              </button>
+            </div>
+          </form>
+
+          <form
+            id="bill"
+            class="col-md-3 mb-5 shadow p-3 bg-body-tertiary rounded"
+          >
+            <div>
+              <span>Total: </span>
+              <h3 id="totalBill" class="text-primary mb-3">00.0</h3>
+            </div>
+
+            <div>
+              <span>SubTotal: </span>
+              <h3 id="subTotal" class="text-success mb-4">00.0</h3>
+            </div>
+
+            <div class="row my-3">
+              <div class="col">
+                <label for="cashAmount" class="form-label">Cash:</label>
+                <input type="number" class="form-control" id="cashAmount" />
+              </div>
+
+              <div class="col">
+                <label for="discount" class="form-label">Discount:</label>
+                <input type="number" class="form-control" id="discount" />
+              </div>
+            </div>
+
+            <div class="row my-3">
+              <div class="col">
+                <label for="balance" class="form-label">Balance:</label>
+                <input type="number" class="form-control" id="balance" />
+              </div>
+            </div>
+
+            <div
+              class="d-md-flex justify-content-md-center align-items-center mt-lg-5"
+            >
+              <button type="submit" class="btn btn-outline-primary">
+                purchase
+              </button>
+            </div>
+          </form>
+
+          <div class="col-md-7"></div>
+        </div>
+
+        <table id="cartTable" class="table table-hover table-bordered">
+          <thead class="table-dark">
+            <tr>
+              <th scope="col">Item Code</th>
+              <th scope="col">Item Name</th>
+              <th scope="col">Unit Price</th>
+              <th scope="col">Quantity</th>
+              <th scope="col">Total</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </section>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="/controller/NavigationController.js"></script>
     <script type="module" src="/controller/CustomerController.js"></script>
     <script type="module" src="/controller/ItemController.js"></script>
+    <script type="module" src="/controller/OrderController.js"></script>
   </body>
 </html>
